working on biodata

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,6 +1,13 @@
+@import "../../bower_components/bootstrap/less/variables.less";
 @import "variables.less";
 @import "non-responsive.less";
+@import "angular-csp.less";
 
-@import "type.less";
+@import "body.less";
+@import "pagehead.less";
 @import "nav.less";
 @import "navbar.less";
+@import "nav-sidebar.less";
+
+@import "form.less";
+@import "button.less";
