--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -18,3 +18,56 @@
     text-decoration: none;
   }
 }
+
+
+
+/* Take from todc bootstrap */
+.nav-tabs-google > li {
+  margin: 0 -1px 0 0;
+}
+.nav-tabs-google > li > a {
+  padding: 12px 30px 12px 0px;
+  margin: 0 8px;
+  line-height: 1.4;
+  color: #777;
+  border: 3px solid transparent;
+  border-width: 3px 0;
+  border-radius: 0;
+
+  -webkit-transition: all 0.08s linear;
+  -moz-transition: all 0.08s linear;
+  -o-transition: all 0.08s linear;
+  transition: all 0.08s linear;
+}
+.nav-tabs-google > li > a:first-of-type {
+  margin-left: 0;
+}
+.nav-tabs-google > li > a:hover,
+.nav-tabs-google > li > a:focus {
+  background-color: transparent;
+  border-top-color: transparent;
+}
+.nav-tabs-google > li > a:hover {
+  color: #000;
+  border-bottom-color: transparent;
+}
+.nav-tabs-google > li > a:active {
+  color: #dd4b39;
+}
+.nav-tabs-google > li > a:focus {
+  color: #000;
+  outline: 0;
+}
+.nav-tabs-google > li.active > a,
+.nav-tabs-google > li.active > a:hover,
+.nav-tabs-google > li.active > a:focus {
+  color: #dd4b39;
+  border: 3px solid transparent;
+  border-width: 3px 0;
+  // border-bottom-color: #dd4b39;
+}
+
+// .nav-tabs-google.pull-right
+.nav-tabs-google.pull-right > li > a {
+  padding: 12px 0px 12px 30px;
+}
