--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -3,3 +3,8 @@
 
 // Panel
 @panel-border-radius: 0px;
+
+
+@border-radius-base:        2px;
+@border-radius-large:       2px;
+@border-radius-small:       2px;
