--- a/src/less/non-responsive.less
+++ b/src/less/non-responsive.less
@@ -9,14 +9,12 @@ body {
   min-width: 970px;
 }
 
-/* Don't let the lead text change font-size. */
-.lead {
-  font-size: 16px;
-}
-
 /* Finesse the page header spacing */
 .page-header {
   margin-bottom: 30px;
+  padding-bottom: 9px;
+  margin: 40px 0 20px;
+  border-bottom: 1px solid #eee;
 }
 .page-header .lead {
   margin-bottom: 10px;
