--- a/src/less/form.less
+++ b/src/less/form.less
@@ -8,6 +8,14 @@
   margin-bottom: 0px;
 }
 
+.validation-valid {
+  padding-left: 13px;
+  padding-top: 5px;
+  font-size: 12px;
+  margin-bottom: 0px;
+  display: none;
+}
+
 .form-control {
   // background-color: darken(@input-bg, 2%);
   border-radius: 0px;
