--- a/src/less/app.less
+++ b/src/less/app.less
@@ -2,6 +2,7 @@
 @import "variables.less";
 @import "non-responsive.less";
 @import "angular-csp.less";
+@import "statistics.less";
 
 @import "body.less";
 @import "pagehead.less";
