A lot of improvement.

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -5,6 +5,7 @@
 @import "statistics.less";
 
 @import "body.less";
+@import "lists.less";
 @import "pagehead.less";
 @import "nav.less";
 @import "navbar.less";
