--- a/src/less/form.less
+++ b/src/less/form.less
@@ -92,6 +92,7 @@ select.ng-invalid.ng-dirty:not(:focus),
 textarea.ng-invalid.ng-dirty:not(:focus) {
   border-bottom: 1px solid #e74c3c;
   color: #e74c3c;
+  background-color: #f2dede;
 }
 
 /* valid & dirty => green */
