--- a/src/less/app.less
+++ b/src/less/app.less
@@ -5,6 +5,7 @@
 @import "statistics.less";
 
 @import "body.less";
+@import "connected.less";
 @import "cropit.less";
 @import "lists.less";
 @import "pagehead.less";
